# ef3r

./: Cargo.toml  LICENSE  README.md  build.rs  example.ef3r  example.efrs  exmple.ef3r
.github/workflows/: rust.yml
proto/: debugger.proto
src/: ast.rs  debugging.rs  executable.rs  extern_utils.rs  frp.rs  interpreter.rs  lib.rs  lsp.rs  main.rs  modules.rs  node_visualization.rs  parser.rs  stdlib.rs  typechecking.rs  types.rs
src/ast/: expr.rs  raw_expr.rs  traced_expr.rs
src/lsp/: autocomplete.rs
src/modules/: base.rs  bool.rs  io.rs  lists.rs  math.rs  reactive.rs  strings.rs  threading.rs
tests/: autocomplete.rs  frp.rs  node_evaluation.rs  statement_execution.rs  typechecking.rs
