[package]
name = "ef3r"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
bincode = "1.3"
daggy = "0.8.0"
quickcheck = "1.0.3"
getrandom = { version = "0.2", features = ["js"] }
rand = "0.7"
ordered-float = "4.2.2"
nom = "7.1"
nom_locate = "4.0"
macroquad = "0.4.13"
