[package]
name = "ef3r"
version = "0.1.0"
edition = "2021"

[dependencies]
parking_lot = { version = "0.12.3", features = ["deadlock_detection"] }
serde = { version = "1.0", features = ["derive"] }
bincode = "1.3"
daggy = "0.8.0"
bimap = { version = "0.6.3", features = ["serde"] }
quickcheck = "1.0.3"
getrandom = { version = "0.2", features = ["js"] }
rand = "0.7"
rayon = "1.10.0"
ordered-float = "4.2.2"
nom = "7.1"
nom_locate = "4.0"
macroquad = "0.4.13"
tower-lsp = "0.20.0"
tonic = "*"
prost = "0.13"
color-eyre = "0.6"
thiserror = "2.0.9"
tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] }
clap = { version = "4.5.23", features = ["derive"] }

[profile.dev.package.'*']
opt-level = 3

[build-dependencies]
tonic-build = "*"
